# tilling.cc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bash_logout.sample  bugs.md  build.sh  cmake_install.cmake  config.hc  config.hh  conn.hh  control.hh  draft.md  helper.hc  layout.hh  main.cc  main.client.cc  main.hh  main.server.cc  public.hh  sock.hh  sxhkdrc.sample  todo.md  wm-control.cc  wm.cc  xinitrc.sample
archive/: conn.hh  control.hh  main.client.cc  main.hh  main.server.cc  sock.hh
sample/: bashrc  config.json  matwmrc  rc  sxhkdrc
server/: config.hc  main.cc  main.hh  matrix.cc  matrix.hh  server.hh
src/: client.cc  config.h  config.hh  helper.h  helpers.hh  main.cc  main.matc.cc  main.matwm.cc  matrix.cc  matrix.h  project.cc  project.h  server.h  server.hh  tree.cc  tree.h  wm.h
src.old/: client.cc  config.hh
src.old/server/: main.cc  matrix.hh
src/main/: matc.cc  matwm.cc
src/regular.cc/: CMakeLists.txt  regular.hh
src/regular.cc/samples/: test.cc
src/regular.cc/samples/boson-convert/: README.txt  main.cc  source.txt  target.txt  test.sh
src/regular.cc/samples/boson-convert/BosonNLP_NER_6C/: BosonNLP_NER_6C.txt
src/regular.cc/src/: compatible.hh  hub.hh  regular.cc  regular.h
src/server/: main.cc  main.hh  matrix.cc  matrix.hh  server.hh
swap/: helper.hc  layout.hc  layout.hh  wm-control.cc
wm/: main.cc  main.hh
wm_client/: main.cc  main.hh
